@@ -66,8 +66,7 @@ import java.util.Set;
 @Controller
 public class FightController extends BasicInsertableController<Fight, FightDTO, FightRepository,
         FightProvider, FightConverterRequest, FightConverter> {
-    private static final String TOURNAMENT_NOT_FOUND_PREFIX = "No tournament found with id '";
-    private static final String TOURNAMENT_NOT_FOUND_SUFFIX = "',";
+    private static final String TOURNAMENT_NOT_FOUND_WITH_ID = "No tournament found with id '";
 
     private final TournamentConverter tournamentConverter;
     private final TournamentProvider tournamentProvider;
@@ -102,6 +101,7 @@ public class FightController extends BasicInsertableController<Fight, FightDTO, 
         this.senbatsuTournamentHandler = senbatsuTournamentHandler;
     }
 
+    @SuppressWarnings("java:S2696")
     public void addFightsAddedListeners(FightsAddedListener listener) {
         fightsAddedListeners.add(listener);
     }
@@ -121,7 +121,7 @@ public class FightController extends BasicInsertableController<Fight, FightDTO, 
 
     public List<FightDTO> getByTournamentId(Integer tournamentId) {
         return get(tournamentConverter.convert(new TournamentConverterRequest(tournamentProvider.get(tournamentId)
-                .orElseThrow(() -> new TournamentNotFoundException(getClass(), TOURNAMENT_NOT_FOUND_PREFIX + tournamentId + TOURNAMENT_NOT_FOUND_SUFFIX,
+                .orElseThrow(() -> new TournamentNotFoundException(getClass(), TOURNAMENT_NOT_FOUND_WITH_ID + tournamentId + "',",
                         ExceptionType.INFO)))));
     }
 
@@ -156,7 +156,7 @@ public class FightController extends BasicInsertableController<Fight, FightDTO, 
                     if (groupsFromTournament.size() == 1) {
                         tournamentExtraPropertyProvider.save(new TournamentExtraProperty(tournament,
                                 TournamentExtraPropertyKey.KING_INDEX,
-                                getMaxIndex(groupsFromTournament.get(0).getTeams(),
+                                getMaxIndex(groupsFromTournament.getFirst().getTeams(),
                                         Collections.singletonList(teamConverter.reverse(dto.getTeam2()))) + ""));
                     }
                 }
@@ -214,13 +214,13 @@ public class FightController extends BasicInsertableController<Fight, FightDTO, 
 
     public FightDTO getCurrent(Integer tournamentId) {
         return convert(getProvider().getCurrent((tournamentProvider.get(tournamentId)
-                .orElseThrow(() -> new TournamentNotFoundException(getClass(), TOURNAMENT_NOT_FOUND_PREFIX + tournamentId + TOURNAMENT_NOT_FOUND_SUFFIX,
+                .orElseThrow(() -> new TournamentNotFoundException(getClass(), TOURNAMENT_NOT_FOUND_WITH_ID + tournamentId + "',",
                         ExceptionType.INFO)))));
     }
 
     public List<FightDTO> createFights(Integer tournamentId, TeamsOrder teamsOrder, Integer level, String createdBy, String session) {
         final Tournament tournament = (tournamentProvider.get(tournamentId)
-                .orElseThrow(() -> new TournamentNotFoundException(getClass(), TOURNAMENT_NOT_FOUND_PREFIX + tournamentId + TOURNAMENT_NOT_FOUND_SUFFIX,
+                .orElseThrow(() -> new TournamentNotFoundException(getClass(), TOURNAMENT_NOT_FOUND_WITH_ID + tournamentId + "',",
                         ExceptionType.INFO)));
         //Delete any deeper level. If a group changes, the inner levels are invalid.
         getProvider().delete(tournament, level + 1);
@@ -246,7 +246,7 @@ public class FightController extends BasicInsertableController<Fight, FightDTO, 
 
     public List<FightDTO> createNextFights(Integer tournamentId, String createdBy, String session) {
         final Tournament tournament = (tournamentProvider.get(tournamentId)
-                .orElseThrow(() -> new TournamentNotFoundException(getClass(), TOURNAMENT_NOT_FOUND_PREFIX + tournamentId + TOURNAMENT_NOT_FOUND_SUFFIX,
+                .orElseThrow(() -> new TournamentNotFoundException(getClass(), TOURNAMENT_NOT_FOUND_WITH_ID + tournamentId + "',",
                         ExceptionType.INFO)));
         final ITournamentManager selectedManager = tournamentHandlerSelector.selectManager(tournament.getType());
         if (selectedManager != null) {
@@ -279,7 +279,7 @@ public class FightController extends BasicInsertableController<Fight, FightDTO, 
 
     public boolean scoresGoesFromCompetitorsNameToCenter(int tournamentId) {
         return getProvider().scoresGoesFromCompetitorsNameToCenter(tournamentProvider.get(tournamentId)
-                .orElseThrow(() -> new TournamentNotFoundException(getClass(), TOURNAMENT_NOT_FOUND_PREFIX + tournamentId + TOURNAMENT_NOT_FOUND_SUFFIX,
+                .orElseThrow(() -> new TournamentNotFoundException(getClass(), TOURNAMENT_NOT_FOUND_WITH_ID + tournamentId + "',",
                         ExceptionType.INFO)));
     }
 
